Fixes modal overflow (#1655)

--- a/js/components/modal.less
+++ b/js/components/modal.less
@@ -8,6 +8,7 @@
 
 	&__modal-dialog {
 		width: 80rem;
+		max-width: calc(100% - 2rem);
 	}
 	& .modal-title {
 		display: inline;
